--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     }
   },
   "prettier": {
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "nyc": {
     "exclude": [
