--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "groupme-get-all-messages",
   "version": "1.0.0",
   "description": "Simply grab all of the message from a specific groupme group",
+  "bin": {
+    "groupme-get-all-messages": "./bin/groupme-get-all-messages"
+  },
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
@@ -51,9 +54,11 @@
     "node": ">=8.9"
   },
   "dependencies": {
+    "got": "^9.3.2",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
+    "@types/got": "^9.2.0",
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
