--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
   },
   "dependencies": {
     "got": "^9.3.2",
+    "inquirer": "^6.2.0",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
     "@types/got": "^9.2.0",
+    "@types/inquirer": "0.0.43",
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
