--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "groupme-get-all-messages",
   "version": "1.0.0",
-  "description": "Simply grab all of the message from a specific groupme group",
+  "description": "Simply grab all of the messages from a specific GroupMe group",
   "bin": {
     "groupme-get-all-messages": "./bin/groupme-get-all-messages"
   },
