--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
+    "@types/execa": "^0.9.0",
     "@types/got": "^9.2.0",
     "@types/inquirer": "0.0.43",
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
+    "execa": "^1.0.0",
     "gh-pages": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.1.0",
