--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
   "dependencies": {
     "got": "^9.3.2",
     "inquirer": "^6.2.0",
+    "read-pkg-up": "^4.0.0",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
     "@types/execa": "^0.9.0",
     "@types/got": "^9.2.0",
     "@types/inquirer": "0.0.43",
+    "@types/read-pkg-up": "^3.0.1",
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
