--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
   "dependencies": {
     "got": "^9.3.2",
     "inquirer": "^6.2.0",
-    "read-pkg-up": "^4.0.0",
-    "sha.js": "^2.4.11"
+    "read-pkg-up": "^4.0.0"
   },
   "devDependencies": {
     "@types/execa": "^0.9.0",
